packages/game/src/snapshots/game__tests__merge_near_units.snap
---
source: src/lib.rs
expression: hydrated.state
---
GameState {
    cells: {
        Address {
            x: 1,
            y: 0,
        }: 0,
        Address {
            x: 2,
            y: 0,
        }: 0,
    },
    units: {
        0: Unit,
    },
}
