packages/game/src/snapshots/game__tests__move_unit.snap
---
source: src/lib.rs
expression: hydrated.original
---
GameState {
    cells: {
        Address {
            x: 2,
            y: 0,
        }: 1,
        Address {
            x: 1,
            y: 0,
        }: 0,
    },
    units: {
        1: Unit {
            order: None,
        },
        0: Unit {
            order: None,
        },
    },
}
