packages/game/src/snapshots/game__tests__move_unit_2.snap
---
source: src/lib.rs
expression: hydrated.state
---
GameState {
    cells: {
        Address {
            x: 0,
            y: 0,
        }: 0,
        Address {
            x: 1,
            y: 0,
        }: 0,
    },
    units: {
        0: Unit,
    },
}
