packages/game/src/snapshots/game__tests__move_unit_stop.snap
---
source: src/lib.rs
expression: hydrated.original
---
GameState {
    cells: {
        Address {
            x: 1,
            y: 0,
        }: 0,
        Address {
            x: 2,
            y: 0,
        }: 0,
    },
    units: {
        0: Unit {
            order: Some(
                Stop,
            ),
        },
    },
}
