packages/game/src/snapshots/game__tests__new.snap
---
source: src/lib.rs
expression: hydrated
---
HydratedGameState {
    units: {
        0: HydratedUnit {
            unit: Unit {
                order: None,
            },
            addresses: {
                Address {
                    x: 0,
                    y: 0,
                },
            },
        },
        1: HydratedUnit {
            unit: Unit {
                order: None,
            },
            addresses: {
                Address {
                    x: 2,
                    y: 0,
                },
            },
        },
    },
    original: GameState {
        cells: {
            Address {
                x: 0,
                y: 0,
            }: 0,
            Address {
                x: 2,
                y: 0,
            }: 1,
        },
        units: {
            0: Unit {
                order: None,
            },
            1: Unit {
                order: None,
            },
        },
    },
}
